# fbd-calc

./: .gitignore  README.md  fbd-data.json  pyproject.toml
fbd_calc/: cli.py  data.py  files.py
