[tool.poetry]
name = "fbd-calc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cmd2 = "^2.4.3"
numpy = "^1.26.4"
pandas = "^2.2.1"

[tool.poetry.scripts]
fbd-cli = "fbd_calc.cli:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
